envoy-backend-http.yaml
static_resources:
  listeners:
  - name: sqlserver_listener
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 444
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/directtest"
                direct_response:
                  status: 200
                  body:
                    inline_string: "Hello"
              - match:
                  connect_matcher:
                    {}
                route:
                  cluster: sqlserver_cluster
                  upgrade_configs:
                  - upgrade_type: CONNECT
                    connect_config:
                      {}
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          http2_protocol_options:
            allow_connect: true
          upgrade_configs:
          - upgrade_type: CONNECT
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          require_client_certificate: true
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: certs/servercert.pem
              private_key:
                filename: certs/serverkey.pem
            validation_context:
              match_typed_subject_alt_names:
              - san_type: DNS
                matcher:
                  exact: proxy-sqlserver-frontend.mydomain.com
              trusted_ca:
                filename: certs/cacert.pem
  clusters:
  - name: sqlserver_cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: sqlserver_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: sqlserver
                port_value: 1433
